# Quasar

./: .eslintrc.json  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AlertDialog.jsx  CommandPalette.jsx  Dialog.jsx  DropdownMenu.jsx  Editor.jsx  FileExplorer.jsx  FileTree.jsx  MenuBar.jsx  ModernIDE.jsx  Notifications.jsx  StatusBar.jsx  TabBar.jsx  TitleBar.jsx  WindowControls.jsx  menu.jsx
src/hooks/: useFileSystem.js
src/pages/: _app.tsx  index.jsx
src/styles/: globals.css
